login and registration done

--- a/src/Home/Banner/Banner.css
+++ b/src/Home/Banner/Banner.css
@@ -1,5 +1,5 @@
 .banner{
-    background-image: linear-gradient(rgba(34, 34, 34, 0.76),rgb(0, 0, 0)),url('../../../public/banner.jpg');
+    background-image: linear-gradient(rgba(34, 34, 34, 0.76),rgb(0, 0, 0)),url('/banner.jpg');
     background-size: cover;
   
 
